v4l2: Handle v4l2_ioctl() errors even in error handling

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=721268